--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>The Useless Button</title>
+  <title>Random Website Generator</title>
   <style>
     body {
       margin: 0;
@@ -48,151 +48,127 @@
   </style>
 </head>
 <body>
-
-  <h1>TAKE ME SOMEWHERE USELESS</h1>
-  <button onclick="goSomewhereUseless()">PLEASE</button>
-
-  <footer>Inspired by theuselessweb.com</footer>
+  <h1>TAKE ME TO A RANDOM WEBSITE</h1>
+  <button onclick="goRandom()">GO</button>
+  <footer>Inspired by randomness</footer>
 
   <script>
-    const sites = [
-      "https://theuselessweb.com",
-      "https://thisissand.com",
-      "https://floatingqrcode.com",
-      "http://doughnutkitten.com",
-      "https://github.com",
-      "https://roblox.com",
-      "https://minecraft.net",
-      "https://now.gg/play/roblox-corporation/5349/roblox",
-      "https://www.ducksters.com",
-      "http://scroll-o-meter.club",
-      "https://pointerpointer.com",
-      "https://blocked.goguardian.com/teacher/block.html",
-      "http://yeahlemons.com",
-      "https://geometrytip.online",
-      "https://morsecode.world/international/translator.html",
-      "about:blank",
-      "https://therandombutton.github.io",
-      "https://hackertyper.net",
-      "https://thegeekboiz.github.io/PythonScratcher/youareanidiot/index.html",
-      "https://blocked.goguardian.com",
-      "http://www.patience-is-a-virtue.org",
-      "https://iframe-generator.org",
-      "chrome://dino",
-      "https://heeeeeeeey.com",
-      "https://www.staggeringbeauty.com",
-      "https://endless.horse",
-      "https://ninjaflex.com",
-      "https://corndog.io",
-      "https://www.rrrgggbbb.com",
-      "https://www.koalastothemax.com",
-      "https://www.fallingfalling.com",
-      "https://www.zoomquilt.org",
-      "https://www.smashthewalls.com",
-      "https://www.omfgdogs.com",
-      "https://thisisnotajumpscare.com",
-      "https://beesbeesbees.com",
-      "https://cat-bounce.com",
-      "https://longdogechallenge.com",
-      "https://zombo.com",
-      "https://clickclickclick.click",
-      "https://pixelsfighting.com",
-      "https://eelslap.com",
-      "https://trypap.com",
-      "https://leekspin.com",
-      "https://toadstool.ch",
-      "https://aprilfoolsdayontheweb.com",
-      "https://cant-not-tweet-this.com",
-      "https://fartscroll.com",
-      "https://www.nyan.cat",
-      "https://screaminggoat.io",
-      "https://epik-player.github.io/The-Useless-Button",
-      "https://www.randomcolor.com",
-      "https://www.popcat.click",
-      "https://flappybird.io",
-      "https://www.patienceisavirtue.org",
-      "https://www.smbc-comics.com/",
-      "https://www.idlewildgames.com",
-      "https://www.pipolar.com",
-      "http://www.fungames.com",
-      "https://whatthefuckisareddit.com",
-      "https://www.ratemyprofessor.com",
-      "https://www.doomworld.com",
-      "https://www.wtf.com",
-      "https://www.koalastothemax.com",
-      "https://www.hackertyper.io",
-      "https://www.corybakerfilmmaker.com",
-      "https://chickenonaraft.com",
-      "https://www.boredbutton.com",
-      "https://clarkkentscaves.com",
-      "http://www.aplusk.com",
-      "http://www.dinosaursandthings.com",
-      "https://skytyper.com",
-      "https://www.wtfmouse.com",
-      "https://www.99-bottles-of-beer.net",
-      "http://www.lookatmygaydog.com",
-      "https://www.flashinglights.co.uk",
-      "https://clippyplusplus.com",
-      "http://www.mousebreaker.com",
-      "https://www.tryontrials.com",
-      "http://www.snakegameplay.com",
-      "https://www.planethungry.com",
-      "https://www.oioioi.io",
-      "https://unexpectedsquares.com",
-      "https://www.webmd.com",
-      "https://www.teachyourkidscode.com",
-      "http://www.moopdog.com",
-      "http://www.burgerator.com",
-      "https://www.loremipsum.com",
-      "https://screamingmeme.com",
-      "http://www.donttoucheyourself.com",
-      "https://8bitmeme.com",
-      "http://www.clicksquirrel.com",
-      "https://www.your-dog-is-perfect.com",
-      "https://www.guntherflip.com",
-      "https://www.freemathgames.com",
-      "https://www.bestgames.com",
-      "https://www.splashmeme.com",
-      "https://www.fluffypuppiesgames.com",
-      "https://www.fungifall.com",
-      "https://www.theendofinternet.com",
-      "https://mousetrapgame.com",
-      "https://www.spacejam.com",
-      "https://www.randomfacts.com",
-      "https://www.zoromato.com",
-      "http://www.mysteryurl.com",
-      "https://www.randomquestion.com",
-      "https://www.reddit.com/r/aww",
-      "https://www.randomhumor.com",
-      "https://www.nocodegame.com",
-      "https://www.fantasyexplorer.com",
-      "http://www.randomplace.com",
-      "http://www.wonderoid.com",
-      "https://www.colorpickerapp.com",
-      "https://www.wiregoggles.com",
-      "https://www.shirtrss.com",
-      "https://www.purejoygames.com",
-      "https://www.realmeatcheese.com",
-      "https://www.oopsipressedspacebar.com",
-      "https://www.catgifpage.com",
-      "https://www.youporn.com",  
-      "https://www.noskinnyjeans.com",
-      "http://www.boatmurdered.com",
-      "https://www.fancydressball.com",
-      "https://www.niceboat.com",
-      "https://www.burnedout.com",
-      "https://www.getonwithit.com",
-      "https://www.boredoutofmyhead.com",
-      "http://www.followtheline.com",
-      "http://www.teambuilder.co.uk"
-    ];
+    function generateRandomURL() {
+      const categories = [
+        // Social Media
+        'https://www.reddit.com/r/funny/',
+        'https://www.boredpanda.com/',
+        'https://www.tumblr.com/',
+        'https://www.twitter.com/',
+        'https://www.instagram.com/',
+        'https://www.snapchat.com/',
+        'https://www.tiktok.com/',
+        'https://www.facebook.com/',
+        'https://www.pinterest.com/',
+        'https://www.linkedin.com/',
 
-    function goSomewhereUseless() {
-      const randomIndex = Math.floor(Math.random() * sites.length);
-      const url = sites[randomIndex];
-      window.open(url, '_blank');
+        // News & Media
+        'https://www.nytimes.com/',
+        'https://www.bbc.com/',
+        'https://www.cnn.com/',
+        'https://www.theguardian.com/',
+        'https://www.aljazeera.com/',
+        'https://www.npr.org/',
+        'https://www.bloomberg.com/',
+        'https://www.foxnews.com/',
+        'https://www.reuters.com/',
+
+        // Education & Learning
+        'https://www.wikipedia.org/',
+        'https://www.khanacademy.org/',
+        'https://www.coursera.org/',
+        'https://www.edx.org/',
+        'https://www.udemy.com/',
+        'https://www.academia.edu/',
+        'https://www.stackoverflow.com/',
+
+        // Entertainment
+        'https://www.netflix.com/',
+        'https://www.youtube.com/',
+        'https://www.spotify.com/',
+        'https://www.twitch.tv/',
+        'https://www.pandora.com/',
+        'https://www.imdb.com/',
+        'https://www.rottentomatoes.com/',
+
+        // Technology
+        'https://www.github.com/',
+        'https://www.stackoverflow.com/',
+        'https://www.medium.com/',
+        'https://www.hackaday.com/',
+        'https://www.wired.com/',
+        'https://www.techcrunch.com/',
+        'https://www.theverge.com/',
+
+        // Shopping & Deals
+        'https://www.amazon.com/',
+        'https://www.ebay.com/',
+        'https://www.etsy.com/',
+        'https://www.walmart.com/',
+        'https://www.target.com/',
+        'https://www.bestbuy.com/',
+        'https://www.homedepot.com/',
+        'https://www.aliexpress.com/',
+
+        // Games
+        'https://www.roblox.com/',
+        'https://www.mojang.com/',
+        'https://www.steampowered.com/',
+        'https://www.epicgames.com/',
+        'https://www.origin.com/',
+        'https://www.xbox.com/',
+        'https://www.playstation.com/',
+        'https://www.nintendo.com/',
+
+        // Random Fun
+        'https://www.theuselessweb.com/',
+        'https://www.randomwordgenerator.com/',
+        'https://www.sporcle.com/',
+        'https://www.woot.com/',
+        'https://www.boredbutton.com/',
+        'https://www.findtheinvisiblecow.com/',
+        'https://www.duckduckgo.com/',
+        'https://www.wherethefuckismatt.com/',
+        'https://www.staggeringbeauty.com/',
+        'https://www.fallingfalling.com/',
+
+        // Science & Nature
+        'https://www.nasa.gov/',
+        'https://www.nationalgeographic.com/',
+        'https://www.scientificamerican.com/',
+        'https://www.cnn.com/space',
+        'https://www.newscientist.com/',
+        'https://www.popsci.com/',
+        'https://www.smithsonianmag.com/',
+
+        // Random Joke / Pranks
+        'https://www.funnyordie.com/',
+        'https://www.9gag.com/',
+        'https://www.memebase.com/',
+        'https://www.dailystar.co.uk/weird-news/',
+        'https://www.theonion.com/',
+        'https://www.laughingplace.com/',
+        'https://www.jokes.com/'
+      ];
+
+      // Generate random index for category
+      const randomCategoryIndex = Math.floor(Math.random() * categories.length);
+      const randomBaseURL = categories[randomCategoryIndex];
+
+      // Add random suffix (i.e., query params, search terms, etc.)
+      const randomSuffix = Math.random().toString(36).substring(2, 15);
+      return randomBaseURL + randomSuffix;
+    }
+
+    function goRandom() {
+      const randomURL = generateRandomURL();
+      window.open(randomURL, '_blank');
     }
   </script>
-
 </body>
 </html>
