--- a/index.html
+++ b/index.html
@@ -1,76 +1,129 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Random Website Generator</title>
-  <style>
-    body {
-      margin: 0;
-      background-color: #000;
-      color: #fff;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      font-family: 'Arial', sans-serif;
-    }
-
-    h1 {
-      margin-bottom: 50px;
-      font-size: 2em;
-      color: #f0f0f0;
-      text-align: center;
-    }
-
-    button {
-      font-size: 2rem;
-      padding: 20px 40px;
-      border: none;
-      border-radius: 10px;
-      background-color: #ff007f;
-      color: #fff;
-      cursor: pointer;
-      box-shadow: 0 4px 20px rgba(255, 0, 127, 0.5);
-      transition: background 0.3s ease;
-    }
-
-    button:hover {
-      background-color: #e60073;
-    }
-
-    footer {
-      position: absolute;
-      bottom: 10px;
-      font-size: 0.8em;
-      opacity: 0.3;
-    }
-
-    /* Animation for fading out before redirect */
-    #animation {
-      display: none;
-      color: #fff;
-      font-size: 3em;
-      animation: fadeOut 2s forwards;
-    }
-
-    @keyframes fadeOut {
-      0% {
-        opacity: 1;
-      }
-      100% {
-        opacity: 0;
-      }
-    }
-
-  </style>
-</head>
-<body>
-  <h1>TAKE ME TO A RANDOM WEBSITE</h1>
-  <button onclick="startAnimation()">GO</button>
-  <div id="animation">Redirecting...</div> <!-- Animation placeholder -->
-  <footer>Inspired by randomness</footer>
-
-  <script src="script.js"></script> <!-- Link to external JS file -->
-</body>
-</html>
+"https://theuselessweb.com",
+      "https://thisissand.com",
+      "https://floatingqrcode.com",
+      "http://doughnutkitten.com",
+      "https://github.com",
+      "https://roblox.com",
+      "https://minecraft.net",
+      "https://now.gg/play/roblox-corporation/5349/roblox",
+      "https://www.ducksters.com",
+      "http://scroll-o-meter.club",
+      "https://pointerpointer.com",
+      "https://blocked.goguardian.com/teacher/block.html",
+      "http://yeahlemons.com",
+      "https://geometrytip.online",
+      "https://morsecode.world/international/translator.html",
+      "about:blank",
+      "https://therandombutton.github.io",
+      "https://hackertyper.net",
+      "https://thegeekboiz.github.io/PythonScratcher/youareanidiot/index.html",
+      "https://blocked.goguardian.com",
+      "http://www.patience-is-a-virtue.org",
+      "https://iframe-generator.org",
+      "chrome://dino",
+      "https://heeeeeeeey.com",
+      "https://www.staggeringbeauty.com",
+      "https://endless.horse",
+      "https://ninjaflex.com",
+      "https://corndog.io",
+      "https://www.rrrgggbbb.com",
+      "https://www.koalastothemax.com",
+      "https://www.fallingfalling.com",
+      "https://www.zoomquilt.org",
+      "https://www.smashthewalls.com",
+      "https://www.omfgdogs.com",
+      "https://thisisnotajumpscare.com",
+      "https://beesbeesbees.com",
+      "https://cat-bounce.com",
+      "https://longdogechallenge.com",
+      "https://zombo.com",
+      "https://clickclickclick.click",
+      "https://pixelsfighting.com",
+      "https://eelslap.com",
+      "https://trypap.com",
+      "https://leekspin.com",
+      "https://toadstool.ch",
+      "https://aprilfoolsdayontheweb.com",
+      "https://cant-not-tweet-this.com",
+      "https://fartscroll.com",
+      "https://www.nyan.cat",
+      "https://screaminggoat.io",
+      "https://epik-player.github.io/The-Useless-Button",
+      "https://www.randomcolor.com",
+      "https://www.popcat.click",
+      "https://flappybird.io",
+      "https://www.patienceisavirtue.org",
+      "https://www.smbc-comics.com/",
+      "https://www.idlewildgames.com",
+      "https://www.pipolar.com",
+      "http://www.fungames.com",
+      "https://whatthefuckisareddit.com",
+      "https://www.ratemyprofessor.com",
+      "https://www.doomworld.com",
+      "https://www.wtf.com",
+      "https://www.koalastothemax.com",
+      "https://www.hackertyper.io",
+      "https://www.corybakerfilmmaker.com",
+      "https://chickenonaraft.com",
+      "https://www.boredbutton.com",
+      "https://clarkkentscaves.com",
+      "http://www.aplusk.com",
+      "http://www.dinosaursandthings.com",
+      "https://skytyper.com",
+      "https://www.wtfmouse.com",
+      "https://www.99-bottles-of-beer.net",
+      "http://www.lookatmygaydog.com",
+      "https://www.flashinglights.co.uk",
+      "https://clippyplusplus.com",
+      "http://www.mousebreaker.com",
+      "https://www.tryontrials.com",
+      "http://www.snakegameplay.com",
+      "https://www.planethungry.com",
+      "https://www.oioioi.io",
+      "https://unexpectedsquares.com",
+      "https://www.webmd.com",
+      "https://www.teachyourkidscode.com",
+      "http://www.moopdog.com",
+      "http://www.burgerator.com",
+      "https://www.loremipsum.com",
+      "https://screamingmeme.com",
+      "http://www.donttoucheyourself.com",
+      "https://8bitmeme.com",
+      "http://www.clicksquirrel.com",
+      "https://www.your-dog-is-perfect.com",
+      "https://www.guntherflip.com",
+      "https://www.freemathgames.com",
+      "https://www.bestgames.com",
+      "https://www.splashmeme.com",
+      "https://www.fluffypuppiesgames.com",
+      "https://www.fungifall.com",
+      "https://www.theendofinternet.com",
+      "https://mousetrapgame.com",
+      "https://www.spacejam.com",
+      "https://www.randomfacts.com",
+      "https://www.zoromato.com",
+      "http://www.mysteryurl.com",
+      "https://www.randomquestion.com",
+      "https://www.reddit.com/r/aww",
+      "https://www.randomhumor.com",
+      "https://www.nocodegame.com",
+      "https://www.fantasyexplorer.com",
+      "http://www.randomplace.com",
+      "http://www.wonderoid.com",
+      "https://www.colorpickerapp.com",
+      "https://www.wiregoggles.com",
+      "https://www.shirtrss.com",
+      "https://www.purejoygames.com",
+      "https://www.realmeatcheese.com",
+      "https://www.oopsipressedspacebar.com",
+      "https://www.catgifpage.com",
+      "https://www.youporn.com",  
+      "https://www.noskinnyjeans.com",
+      "http://www.boatmurdered.com",
+      "https://www.fancydressball.com",
+      "https://www.niceboat.com",
+      "https://www.burnedout.com",
+      "https://www.getonwithit.com",
+      "https://www.boredoutofmyhead.com",
+      "http://www.followtheline.com",
+      "http://www.teambuilder.co.uk"
