--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       "https://zoomquilt.org",
       "https://heeeeeeeey.com",
       "https://eelslap.com",
-      "https://corndog.io",
+      "corndog.io",
       "https://beesbeesbees.com",
       "https://omfgdogs.com",
       "https://thisisnotajumpscare.com",
