--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Quirky Site Launcher</title>
+  <title>The Useless Button</title>
   <style>
     html, body {
       margin: 0;
@@ -62,8 +62,8 @@
 <body>
 
   <div id="pageWrapper">
-    <h1>TAKE ME TO A RANDOM SITE</h1>
-    <button id="launchBtn">PLEASE</button>
+    <h1>GO TO A RANDOM WEBSITE</h1>
+    <button id="launchBtn">HERE</button>
     <footer>Inspired by The Useless Web</footer>
   </div>
 
